--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,3 +22,26 @@ a {
 p {
   font-size: 14px;
 }
+
+h1, h2, h3 {
+  font-weight: bold;
+}
+
+h1, a {
+  color: white;
+}
+
+#header {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  background-position: center;
+  background-size: cover;
+  height: 120px;
+}
+
+#header-content {
+  position: center;
+  size: cover;
+  height: 70px;
+  margin: 0 auto;
+  text-align: center;
+}
