--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,10 +35,25 @@ h1, a {
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
   background-position: center;
   background-size: cover;
-  height: 120px;
+  height: 1280px;
 }
 
 #header-content {
+  position: center;
+  size: cover;
+  height: 70px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#newyork {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  background-position: center;
+  background-size: cover;
+  height: 120px;
+}
+
+#newyork-content {
   position: center;
   size: cover;
   height: 70px;
