--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,11 +8,12 @@ h1, h2, h3 {
 
 .header {
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  background-position: center;
   text-align: center;
   color: white;
 }
 
-.head h1 {
+.header h1 {
 font-size: 70px;
 }
 
