--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,9 @@ h1, h2, h3 {
 .header {
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
   background-position: center;
+  height: 626px;
+  width: 644;
+  cursor: zoom-in;
   text-align: center;
   color: white;
 }
